--- a/styles.css
+++ b/styles.css
@@ -152,3 +152,64 @@ nav {
   transform: scale(1.2);
   z-index: 5;
 }
+
+.modal-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 3;
+}
+
+.modal-box {
+  width: 80%;
+  max-width: 600px;
+  min-height: 50vh;
+  height: auto;
+  background-color: #000;
+  border-radius: 10px;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  line-height: 1.5;
+  padding: 20px;
+}
+
+.modal-box h1 {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.modal-footer {
+  display: flex;
+  justify-content: space-between;
+  color: rgb(201, 201, 201);
+  margin-bottom: 2em;
+}
+
+.modal-buttons {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 2em;
+}
+
+.modal-buttons button {
+  padding: 10px 20px;
+  border-radius: 5px;
+  background-color: rgb(229, 9, 20);
+  color: #fff;
+  font-weight: bold;
+  font-size: 20px;
+  border: 1px solid #fff;
+}
+
+.modal-buttons button:hover {
+  background-color: rgba(229, 9, 20, 0.5);
+  cursor: pointer;
+}
